chores: cart page issue fixed flex-container overflow fix ✅

--- a/Task-03-React/src/index.css
+++ b/Task-03-React/src/index.css
@@ -238,7 +238,7 @@ a {
 /* carousel */
 
 .carousel {
-  /* border: 1px solid honeydew; */
+  border: 1px solid honeydew;
   /* padding: 10px; */
   width: 90%;
   margin: 0 auto;
@@ -1411,28 +1411,29 @@ p:nth-child(3) {
 }
 
 .cart-section-container {
+  min-height: 50vh;
   width: 95%;
   margin: 0 auto;
-  margin-top: 4%;
-  /* border: 1px solid darkorange; */
   padding: 10px;
   display: flex;
   gap: 50px;
   color: white;
+  padding-top: 8.5%;
 }
 /* cart-page-container end */
 
 .cart-row-item {
-  flex-basis: 75%;
+  flex-basis: 60%;
   /* border: 1px solid rgb(54, 147, 0); */
   /* padding: 10px; */
+  max-width: 60%;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
 .cart-row-item:nth-child(2) {
-  flex-basis: 35%;
+  flex-basis: 40%;
 }
 
 .menu-items-cart-wrapper {
@@ -1512,7 +1513,6 @@ p:nth-child(3) {
 .counter-icon {
   font-size: 1.4rem;
   color: black;
-  background-color: #d9d9d9;
 }
 
 .cart-items-meal-carousel {
@@ -1522,12 +1522,31 @@ p:nth-child(3) {
   flex-direction: column;
   gap: 20px;
   margin-block: 4%;
+  min-height: 40vh;
+  max-height: 50vh;
 }
 
-.meals-carousel {
+/* .meals-carousel {
   padding: 10px;
   border: 1px solid rgb(54, 147, 0);
   min-height: 20vh;
+} */
+
+.test {
+  width: 100%;
+  height: 100%;
+}
+
+.meals-carousel-item {
+  width: 300px;
+  max-height: 450px;
+}
+
+.meals-carousel-item img {
+  width: 10px;
+  height: 10px;
+  object-fit: cover;
+  aspect-ratio: 1/1;
 }
 
 .cart-items-recently-ordered {
